--- a/so-far/index.html
+++ b/so-far/index.html
@@ -6,7 +6,7 @@
   <meta content="ramesh, ramesh ganapathy, rameshganapathy, ganapathy, rameshganapathy.com, so far, history, portfolio, achievements, work samples" name="keywords">
   <meta content="Ramesh Ganapathy" name="author">
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-  <link href="style.css" rel="stylesheet">
+  <link href="http://www.rameshganapathy.com/style.css" rel="stylesheet">
 </head>
 <body>
   <ul class="content-sofar" id="outer_wrapper" style="margin-top: 7.5px;">
